--- a/share/ui/pycam-project.ui
+++ b/share/ui/pycam-project.ui
@@ -6346,6 +6346,7 @@ Everyone else should use the option for M3/M5 (see above).</property>
                               <object class="GtkLabel" id="GCodeTouchOffLabel">
                                 <property name="visible">True</property>
                                 <property name="label" translatable="yes">Touch off and tool length measurement</property>
+	                            <property name="use_markup">True</property>
                               </object>
                             </child>
                           </object>
@@ -7586,6 +7587,8 @@ Leave this field empty for running a local server.</property>
                             <property name="xalign">0</property>
                             <property name="label" translatable="yes">Parallel processing is currently not available on your system.
 You need to switch to Python v2.6 (or higher) or install the Python module "multiprocessing".
+
+Note: The Windows standalone executable does not support parallel processing. Please install PyCAM's package for Windows and its dependencies if you need this feature.
     </property>
                             <property name="wrap">True</property>
                           </object>
